--- a/script/config.ini
+++ b/script/config.ini
@@ -1,7 +1,7 @@
 [general]
 destination_folder_name = VimiumPDFForFirefox
 pdf_folder_name = VimiumPDFForFirefox
-
+autostart = True
 [server]
 port = 8888
 
